Fix heading overlap in report labels.

--- a/css/site.css
+++ b/css/site.css
@@ -37,3 +37,6 @@ body {
 .spinnerSpacing {
     margin-bottom: 15px;
 }
+.headingPadding {
+    padding-bottom: 5px;
+}
